--- a/ddrive/CMakeLists.txt
+++ b/ddrive/CMakeLists.txt
@@ -1,5 +1,6 @@
 add_library(ddrive STATIC
     ${CMAKE_CURRENT_LIST_DIR}/ddrive.c
+    ${CMAKE_CURRENT_LIST_DIR}/stepper.c
 )
 
 target_include_directories(ddrive PUBLIC
@@ -8,6 +9,7 @@ target_include_directories(ddrive PUBLIC
 
 target_link_libraries(ddrive
     pico_stdlib
+    hardware_pwm
 )
 
 target_include_directories(ddrive PUBLIC
