Rename module 'ddrive' -> 'stepper'

--- a/stepper/CMakeLists.txt
+++ b/stepper/CMakeLists.txt
@@ -1,17 +1,17 @@
-add_library(ddrive STATIC
+add_library(stepper STATIC
     ${CMAKE_CURRENT_LIST_DIR}/ddrive.c
     ${CMAKE_CURRENT_LIST_DIR}/stepper.c
 )
 
-target_include_directories(ddrive PUBLIC
+target_include_directories(stepper PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
-target_link_libraries(ddrive
+target_link_libraries(stepper
     pico_stdlib
     hardware_pwm
 )
 
-target_include_directories(ddrive PUBLIC
+target_include_directories(stepper PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
