Rename directory 'stepper' -> 'stepperlib'

--- a/stepperlib/CMakeLists.txt
+++ b/stepperlib/CMakeLists.txt
@@ -1,17 +1,17 @@
-add_library(stepper STATIC
+add_library(stepperlib STATIC
     ${CMAKE_CURRENT_LIST_DIR}/ddrive.c
     ${CMAKE_CURRENT_LIST_DIR}/stepper.c
 )
 
-target_include_directories(stepper PUBLIC
+target_include_directories(stepperlib PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
 
-target_link_libraries(stepper
+target_link_libraries(stepperlib
     pico_stdlib
     hardware_pwm
 )
 
-target_include_directories(stepper PUBLIC
+target_include_directories(stepperlib PUBLIC
     ${CMAKE_CURRENT_LIST_DIR}
 )
